# ai-dev-console

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: model_registry_story.md  practice_questions.md  slides.md
src/ai_dev_console/: __init__.py
src/ai_dev_console/models/: __init__.py  exceptions.py  model.py  vendor.py
src/ai_dev_console/models/client/: __init__.py  adapters.py  base.py  types.py
src/ai_dev_console_apps/cli/prompt/: README.md  main.py
src/ai_dev_console_apps/gui/ai_dev_console/: app.py  aws.py  main.py
tests/unit/: test_model_client.py  test_models.py  test_streaming.py
