[project]
name = "ai-dev-console"
version = "0.1.0"
description = "An interactive development console for AI builders"
authors = [
    {name = "Walter Vargas", email = "w@walter.bio"},
]
dependencies = [
    "anthropic>=0.18.1",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ai-prompt = "ai_dev_console_apps.cli.prompt.main:main"
ai-dev-console = "ai_dev_console_apps.gui.ai_dev_console.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
]
app = ["streamlit>=1.30.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true

# Add these sections to properly configure the package structure
[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_console", "src/ai_dev_console_apps"]

[tool.hatch.build]
packages = ["src/ai_dev_console", "src/ai_dev_console_apps"]